# LastTask

./: .gitattributes  .gitignore  README.md
.claude/: settings.local.json
docs/: REAL_ROBOT.md  TASKS.md  VM_SETUP.md
fyp_jackal_description/: CMakeLists.txt  package.xml
fyp_jackal_description/urdf/: fyp_jackal.urdf.xacro  mid360.urdf.xacro
fyp_jackal_gazebo/: CMakeLists.txt  package.xml
fyp_jackal_gazebo/launch/: fyp_world.launch  spawn_jackal.launch
fyp_jackal_gazebo/worlds/: fyp_arena.world  fyp_arena_low_bridge.world
fyp_jackal_navigation/: CMakeLists.txt  package.xml
fyp_jackal_navigation/config/: waypoints.yaml
fyp_jackal_navigation/launch/: nav.launch  nav_real.launch  view.launch
fyp_jackal_navigation/launch/include/: amcl.launch  move_base.launch
fyp_jackal_navigation/maps/: fyp_arena.pgm  fyp_arena.yaml  myroom.pgm  myroom.yaml
fyp_jackal_navigation/params/: base_local_planner.yaml  costmap_common.yaml  costmap_common_2donly.yaml  costmap_common_2donly_real.yaml  costmap_common_real.yaml  global_costmap.yaml  global_costmap_real.yaml  local_costmap.yaml  local_costmap_real.yaml  teb_local_planner.yaml
fyp_jackal_navigation/rviz/: fyp_nav.rviz
fyp_jackal_navigation/scripts/: costmap_janitor.py  measure_tilt.py  mid360_filter.py  nav_debug.py  stamp_map.py  waypoint_nav.py
scripts/: generate_map.py  vm_setup.sh
